[gd_scene load_steps=8 format=3 uid="uid://uicvxq8os1fh"]

[ext_resource type="Script" uid="uid://csa1dcjkxa3nm" path="res://GUI/pause_menu/pause_menu.gd" id="1_vhkkt"]
[ext_resource type="Texture2D" uid="uid://cxcrfhb1pue2x" path="res://entities/items/sprites/items.png" id="2_xyt8q"]
[ext_resource type="PackedScene" uid="uid://cwoume8u3kuok" path="res://GUI/pause_menu/inventory/InventorySlot.tscn" id="3_dfhdr"]
[ext_resource type="Script" uid="uid://b617bt6jy16f3" path="res://GUI/pause_menu/inventory/scripts/inventory_ui.gd" id="3_laftm"]
[ext_resource type="Resource" uid="uid://ddrje1b2wc7ec" path="res://GUI/pause_menu/inventory/player_inventory.tres" id="4_mc7vq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vhkkt"]
atlas = ExtResource("2_xyt8q")
region = Rect2(96, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vhkkt"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
texture = SubResource("AtlasTexture_vhkkt")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_vhkkt")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0470588, 0.0901961, 0.145098, 0.784314)

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.0
offset_top = 75.0
offset_right = -12.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button_MainMenu" type="Button" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
text = "MAIN MENU"

[node name="Button_Exit" type="Button" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
text = "EXIT"

[node name="Label" type="Label" parent="Control"]
modulate = Color(0.607843, 0.843137, 0.980392, 0.705882)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -213.0
offset_top = 23.0
offset_right = -146.0
offset_bottom = 46.0
grow_horizontal = 2
text = "[paused]"

[node name="ItemDescription" type="Label" parent="Control"]
modulate = Color(0.811765, 0.988235, 0.992157, 0.705882)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -210.0
offset_top = 154.0
offset_right = -1.0
offset_bottom = 204.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 10
autowrap_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 0
offset_left = 24.0
offset_top = 59.0
offset_right = 220.0
offset_bottom = 147.0
theme_override_styles/panel = SubResource("StyleBoxTexture_vhkkt")

[node name="GridContainer" type="GridContainer" parent="Control/PanelContainer"]
layout_mode = 2
columns = 5
script = ExtResource("3_laftm")
data = ExtResource("4_mc7vq")

[node name="InventorySlot" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_dfhdr")]
layout_mode = 2

[node name="InventorySlot2" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_dfhdr")]
layout_mode = 2

[node name="InventorySlot3" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_dfhdr")]
layout_mode = 2

[node name="InventorySlot4" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_dfhdr")]
layout_mode = 2

[node name="InventorySlot5" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_dfhdr")]
layout_mode = 2

[node name="InventorySlot6" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_dfhdr")]
layout_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control"]
max_polyphony = 4
